# hexlet-exercise-kit

./: .env.example  .gitignore  .languagetoolrc.js  .markdownlint.json  Makefile  README.md  bitbucket.config.env  bitbucket.config.env.example  config.env.example  course.mk  docker.mk  eslint.config.js  ghorg.conf.yaml  instructions.md  package-lock.json  package.json
.github/workflows/: main.yml
base_image/: Dockerfile  Makefile  ansible.cfg  phantomjs-shims.js  supervisord.conf
code-basics-synchronizer/: package-lock.json  package.json
code-basics-synchronizer/src/: index.js
content-localizer/: Dockerfile  README.md  config.serge
content-localizer/scripts/: build-translations  entrypoint  fix-directories-owner  get-translations  prepare-to-translate  send-to-translate
downloader/: .hexdownloader  Dockerfile  Makefile  README.md  config.json.example  downloader.py  hexdownloader.sh  pyproject.toml
images/: Makefile
images/base/: Dockerfile
images/clojure/: Dockerfile
images/erlang/: Dockerfile  rebar.config
images/go/: Dockerfile
images/haskell/: Dockerfile
images/java/: Dockerfile  build.gradle
images/javascript/: Dockerfile
images/php/: Dockerfile
images/python/: Dockerfile
images/ruby/: Dockerfile
import-documentation/: .eslintignore  .eslintrc.yml  .npmrc  Makefile  README.md  babel.config.js  index.js  package-lock.json  package.json
import-documentation/__fixtures__/: example.js
import-documentation/__tests__/: test.js
repo-downloader/: .env.example.full  .env.template  .gitignore  .rubocop.yml  Dockerfile  Gemfile  Makefile  README.md  repo_downloader.gemspec
repo-downloader/exe/: download
repo_downloader/: Dockerfile  downloader.py  pyproject.toml
scripts/: asciidoc_to_markdown  download-downloader  forward-envs  get-forwarded-envs  print-course-lessons-names
(+8 files in other folders)
