[tool.poetry]
name = "bitbucket_repo_downloader"
version = "0.1.0"
description = "Download all repositories from the bitbucket account"
authors = ["Kirill Chertkov <chertkov.k@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
GitPython = "^3.1.28"
python-gitlab = "^3.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
